@@ -2,15 +2,20 @@
 % Please edit documentation in R/agglomerate.R
 \name{agglomerate-methods}
 \alias{agglomerate-methods}
-\alias{agglomerateByRank,SummarizedExperiment-method}
 \alias{agglomerateByRank}
+\alias{mergeFeaturesByRank}
+\alias{agglomerateByRank,SummarizedExperiment-method}
 \alias{mergeFeaturesByRank,SummarizedExperiment-method}
 \alias{agglomerateByRank,SingleCellExperiment-method}
 \alias{mergeFeaturesByRank,SingleCellExperiment-method}
 \alias{agglomerateByRank,TreeSummarizedExperiment-method}
 \alias{mergeFeaturesByRank,TreeSummarizedExperiment-method}
-\title{Ag           glomerate data using taxonomic information}
+\title{Agglomerate data using taxonomic information}
 \usage{
+agglomerateByRank(x, ...)
+
+mergeFeaturesByRank(x, ...)
+
 \S4method{agglomerateByRank}{SummarizedExperiment}(
   x,
   rank = taxonomyRanks(x)[1],
@@ -42,6 +47,18 @@
 \code{\link[SummarizedExperiment:SummarizedExperiment-class]{SummarizedExperiment}}
 object}
 
+\item{...}{arguments passed to \code{agglomerateByRank} function for
+\code{SummarizedExperiment} objects,
+\code{\link[=merge-methods]{mergeRows}} and
+\code{\link[scuttle:sumCountsAcrossFeatures]{sumCountsAcrossFeatures}}.
+\itemize{
+\item{\code{remove_empty_ranks}}{A single boolean value for selecting
+whether to remove those columns of rowData that include only NAs after
+agglomeration. (By default: \code{remove_empty_ranks = FALSE})}
+\item{\code{make_unique}}{A single boolean value for selecting
+whether to make rownames unique. (By default: \code{make_unique = TRUE})}
+}}
+
 \item{rank}{a single character defining a taxonomic rank. Must be a value of
 \code{taxonomyRanks()} function.}
 
@@ -57,18 +74,6 @@ will be dropped. This setting can be tweaked by defining
 \item{empty.fields}{a \code{character} value defining, which values should be
 regarded as empty. (Default: \code{c(NA, "", " ", "\t")}). They will be
 removed if \code{na.rm = TRUE} before agglomeration.}
-
-\item{...}{arguments passed to \code{agglomerateByRank} function for
-\code{SummarizedExperiment} objects,
-\code{\link[=merge-methods]{mergeRows}} and
-\code{\link[scuttle:sumCountsAcrossFeatures]{sumCountsAcrossFeatures}}.
-\itemize{
-\item{\code{remove_empty_ranks}}{A single boolean value for selecting
-whether to remove those columns of rowData that include only NAs after
-agglomeration. (By default: \code{remove_empty_ranks = FALSE})}
-\item{\code{make_unique}}{A single boolean value for selecting
-whether to make rownames unique. (By default: \code{make_unique = TRUE})}
-}}
 
 \item{altexp}{String or integer scalar specifying an alternative experiment
 containing the input data.}
