@@ -61,7 +61,7 @@ test_that("merge", {
     expect_error(mia:::.merge_rows(x),
                  'argument "f" is missing')
     FUN_check_x <- function(x,archetype=1){
-        actual <- mergeRows(x, f, archetype)
+        actual <- mergeFeatures(x, f, archetype)
         expect_s4_class(actual,class(x))
         expect_equal(dim(actual),c(2,10))
     }
@@ -77,7 +77,7 @@ test_that("merge", {
     xtse <- TreeSummarizedExperiment(assays = list(mat = mat),
                                      rowRanges = unname(grl))
     FUN_check_x <- function(x,archetype=1){
-        actual <- mergeRows(x, f, archetype)
+        actual <- mergeFeatures(x, f, archetype)
         expect_s4_class(actual,class(x))
         expect_equal(dim(actual),c(2,10))
     }
@@ -99,11 +99,11 @@ test_that("merge", {
     # (trees are pruned differently --> first instance represent specific branch)
     tse <- tse[c(rownames(esophagus), rownames(GlobalPatterns)), ]
     # Only esophagus has these groups --> the merge should contain only esophagus
-    merged  <- mergeRows(tse, f=rowData(tse)$group2, mergeTree=TRUE)
-    merged2 <- mergeRows(tse, f = rowData(tse)$group2, mergeTree = FALSE)
-    merged3 <- mergeRows(esophagus, f = rowData(esophagus)$group2, mergeTree = TRUE)
+    merged  <- mergeFeatures(tse, f=rowData(tse)$group2, mergeTree=TRUE)
+    merged2 <- mergeFeatures(tse, f = rowData(tse)$group2, mergeTree = FALSE)
+    merged3 <- mergeFeatures(esophagus, f = rowData(esophagus)$group2, mergeTree = TRUE)
     merged4 <- .merge_features(tse, merge.by = rowData(tse)$group2, mergeTree = TRUE)
-    merged5 <- mergeRows(tse, f = rowData(tse)$group2, mergeTree = TRUE)
+    merged5 <- mergeFeatures(tse, f = rowData(tse)$group2, mergeTree = TRUE)
     expect_equal( rowLinks(merged)$whichTree, 
                   rowLinks(merged2)$whichTree )
     expect_false( all(rowLinks(merged) == rowLinks(merged2)) )
@@ -113,8 +113,8 @@ test_that("merge", {
     expect_equal(mergeRows(tse, f=rowData(tse)$group2), mergeFeatures(tse, f=rowData(tse)$group2))
     
     # Both datasets have group variable
-    merged <- mergeRows(tse, f = rowData(tse)$group, mergeTree = TRUE)
-    merged2 <- mergeRows(tse, f = rowData(tse)$group, mergeTree = FALSE)
+    merged <- mergeFeatures(tse, f = rowData(tse)$group, mergeTree = TRUE)
+    merged2 <- mergeFeatures(tse, f = rowData(tse)$group, mergeTree = FALSE)
     expect_equal( rowLinks(merged)$whichTree, 
                   rowLinks(merged2)$whichTree )
     expect_false( all(rowLinks(merged) == rowLinks(merged2)) )
