@@ -12,7 +12,7 @@ test_that("agglomerate", {
                           Family = c("c",NA,"d","e","f","g","h",NA,"h","e","f"),
                           n = 7:17)
     rowData(xtse) <- tax_data
-    # mergeRows for agglomerateByRank
+    # mergeRows for mergeFeaturesByRank
     tax_factors <- mia:::.get_tax_groups(xtse, col = 2)
     actual_family <- actual <- mergeRows(xtse, f = tax_factors)
     expect_s4_class(actual,class(xtse))
@@ -27,32 +27,32 @@ test_that("agglomerate", {
     expect_equal(assays(actual)$mat[2,1],c(b = 36))
     expect_equal(assays(actual)$mat[3,1],c(c = 24))
     #
-    expect_error(agglomerateByRank(xtse,"",na.rm=FALSE),
+    expect_error(mergeFeaturesByRank(xtse,"",na.rm=FALSE),
                  "'rank' must be an non empty single character value")
-    expect_error(agglomerateByRank(xtse,"Family",na.rm=""),
+    expect_error(mergeFeaturesByRank(xtse,"Family",na.rm=""),
                  "'na.rm' must be TRUE or FALSE")
-    expect_error(agglomerateByRank(xtse,"Family",na.rm=FALSE,agglomerateTree=""),
+    expect_error(mergeFeaturesByRank(xtse,"Family",na.rm=FALSE,agglomerateTree=""),
                  "'agglomerateTree' must be TRUE or FALSE")
     xtse2 <- xtse
     rowData(xtse2) <- NULL
-    expect_error(agglomerateByRank(xtse2,"Family",na.rm=FALSE),
+    expect_error(mergeFeaturesByRank(xtse2,"Family",na.rm=FALSE),
                  "taxonomyData needs to be populated")
     #
-    actual <- agglomerateByRank(xtse,"Family",na.rm=FALSE)
+    actual <- mergeFeaturesByRank(xtse,"Family",na.rm=FALSE)
     expect_equivalent(rowData(actual),rowData(actual_family))
-    actual <- agglomerateByRank(xtse,"Phylum",na.rm=FALSE)
+    actual <- mergeFeaturesByRank(xtse,"Phylum",na.rm=FALSE)
     expect_equivalent(rowData(actual),rowData(actual_phylum))
     #
-    actual <- agglomerateByRank(xtse,"Family", na.rm = TRUE)
+    actual <- mergeFeaturesByRank(xtse,"Family", na.rm = TRUE)
     expect_equal(dim(actual),c(6,10))
     expect_equal(rowData(actual)$Family,c("c","d","e","f","g","h"))
-    actual <- agglomerateByRank(xtse,"Family", na.rm = FALSE) # the default
+    actual <- mergeFeaturesByRank(xtse,"Family", na.rm = FALSE) # the default
     expect_equal(dim(actual),c(8,10))
     expect_equal(rowData(actual)$Family,c("c",NA,"d","e","f","g","h",NA))
-    actual <- agglomerateByRank(xtse,"Phylum")
+    actual <- mergeFeaturesByRank(xtse,"Phylum")
     expect_equivalent(rowData(actual),rowData(actual_phylum))
     #
-    actual1 <- agglomerateByRank(xtse,"Family")
+    actual1 <- mergeFeaturesByRank(xtse,"Family")
     actual2 <- .merge_features(xtse, merge.by = "Family")
     expect_equal(actual1, actual2)
     expect_equal(agglomerateByRank(xtse,"Family"), mergeFeaturesByRank(xtse,"Family"))
@@ -61,20 +61,20 @@ test_that("agglomerate", {
     # the same dimensionality is retained
     data(enterotype, package="mia")
     expect_equal(length(unique(rowData(enterotype)[,"Genus"])),
-                 nrow(agglomerateByRank(enterotype,"Genus")))
+                 nrow(mergeFeaturesByRank(enterotype,"Genus")))
 
     # agglomeration in all its forms
     data(GlobalPatterns, package="mia")
     se <- GlobalPatterns
-    actual <- agglomerateByRank(se, rank = "Family")
+    actual <- mergeFeaturesByRank(se, rank = "Family")
     expect_equal(dim(actual),c(603,26))
     expect_equal(length(rowTree(actual)$tip.label),
                  length(rowTree(se)$tip.label))
-    actual <- agglomerateByRank(se, rank = "Family", mergeTree = TRUE)
+    actual <- mergeFeaturesByRank(se, rank = "Family", mergeTree = TRUE)
     expect_equal(dim(actual),c(603,26))
     expect_equal(length(rowTree(actual)$tip.label),
                  603)
-    actual <- expect_warning(agglomerateByRank(se, rank = "Family",
+    actual <- expect_warning(mergeFeaturesByRank(se, rank = "Family",
                                                agglomerateTree = TRUE))
     expect_equal(dim(actual),c(603,26))
     expect_equal(length(rowTree(actual)$tip.label),
@@ -83,22 +83,22 @@ test_that("agglomerate", {
     se1 <- transformAssay(se, method = "pa")
     se2 <- se1
     assay(se2, "pa")[1, 1] <- -1
-    expect_warning(agglomerateByRank(se1, rank = "Phylum"))
-    expect_warning(agglomerateByRank(se1, rank = "Order"))
+    expect_warning(mergeFeaturesByRank(se1, rank = "Phylum"))
+    expect_warning(mergeFeaturesByRank(se1, rank = "Order"))
 
     # Load data from miaTime package
     skip_if_not(require("miaTime", quietly = TRUE))
     data(SilvermanAGutData)
     se <- SilvermanAGutData
     # checking reference consensus sequence generation
-    actual <- agglomerateByRank(se,"Genus", mergeRefSeq = FALSE)
+    actual <- mergeFeaturesByRank(se,"Genus", mergeRefSeq = FALSE)
     expect_equal(as.character(referenceSeq(actual)[[1]]),
                  paste0("TCAAGCGTTATCCGGATTTATTGGGTTTAAAGGGTGCGTAGGCGGTTTGATAA",
                         "GTTAGAGGTGAAATCCCGGGGCTTAACTCCGGAACTGCCTCTAATACTGTTAG",
                         "ACTAGAGAGTAGTTGCGGTAGGCGGAATGTATGGTGTAGCGGTGAAATGCTTA",
                         "GAGATCATACAGAACACCGATTGCGAAGGCAGCTTACCAAACTATATCTGACG",
                         "TTGAGGCACGAAAGCGTGGGG"))
-    actual <- agglomerateByRank(se,"Genus", mergeRefSeq = TRUE)
+    actual <- mergeFeaturesByRank(se,"Genus", mergeRefSeq = TRUE)
     expect_equal(as.character(referenceSeq(actual)[[1]]),
                  paste0("BCNMKCKTTVWYCKKMHTTMYTKKKYKTMMMKNKHDYKYMKDYKKNHNNNYMM",
                         "KHHNDNNKTKMMMDNBHNBKKCTYMMCHNBNDDDNKSSHBNNRWDMYKKBNND",
@@ -106,18 +106,18 @@ test_that("agglomerate", {
                         "RWDWTNDBRVRRAMHHCMRDKKSSRARGSSVSYYHNYBRRVHNDNNHYKRMVV",
                         "YKVRDNNNSRAARSBDKGGKK"))
     # Test that remove_empty_ranks work
-    expect_error(agglomerateByRank(se, rank = "Class", remove_empty_ranks = NULL))
-    expect_error(agglomerateByRank(se, rank = "Class", remove_empty_ranks = "NULL"))
-    expect_error(agglomerateByRank(se, rank = "Class", remove_empty_ranks = 1))
-    expect_error(agglomerateByRank(se, rank = "Class", remove_empty_ranks = c(TRUE, TRUE)))
-    x <- agglomerateByRank(se, rank = "Class")
+    expect_error(mergeFeaturesByRank(se, rank = "Class", remove_empty_ranks = NULL))
+    expect_error(mergeFeaturesByRank(se, rank = "Class", remove_empty_ranks = "NULL"))
+    expect_error(mergeFeaturesByRank(se, rank = "Class", remove_empty_ranks = 1))
+    expect_error(mergeFeaturesByRank(se, rank = "Class", remove_empty_ranks = c(TRUE, TRUE)))
+    x <- mergeFeaturesByRank(se, rank = "Class")
     rd1 <- rowData(x)[, 1:3]
-    x <- agglomerateByRank(se, rank = "Class", remove_empty_ranks = TRUE)
+    x <- mergeFeaturesByRank(se, rank = "Class", remove_empty_ranks = TRUE)
     rd2 <- rowData(x)
     expect_equal(rd1, rd2)
     # Test that make_unique work
-    uniq <- agglomerateByRank(se, rank = "Species")
-    not_uniq <- agglomerateByRank(se, rank = "Species", make_unique = FALSE)
+    uniq <- mergeFeaturesByRank(se, rank = "Species")
+    not_uniq <- mergeFeaturesByRank(se, rank = "Species", make_unique = FALSE)
     expect_true( !any( duplicated(rownames(uniq)) ) )
     expect_true( any( duplicated(rownames(not_uniq)) ) )
 })
