@@ -82,3 +82,4 @@ Changes in version 1.9.x
 + calculateDMM: deprecated/updated outdated functions
 + Added Tengeler2020 dataset
 + *RDA & *CCA: calculate also statistical significance
++ Deprecate mergeRows, mergeCols, agglomerateByRank, agglomerateByPrevalence
